--- a/HomeWorkEX2.html
+++ b/HomeWorkEX2.html
@@ -146,7 +146,7 @@
                 <label class="t1">(格式：西元年／月／日 yyyy／MM／dd)</label>
             </div>
             <div>
-                <input type="submit" value="確定" onclick="chkAcc(), chkPwd()" />
+                <input type="submit" value="確定" onclick="chkAcc(), chkPwd(),getBir()" />
                 <input type="reset" value="清除" />
             </div>
         </fieldset>
